# django-webdav-storage

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  Makefile  Pipfile  README.rst  nginx.conf  pyproject.toml  pytest.ini  setup.cfg  setup.py  tests.py  tox.ini  webdav.conf
.travis/: install.sh  run.sh
.travis/nginx/: webdav.conf
django_webdav_storage/: __init__.py  apps.py  listing.py  storage.py  tests.py
django_webdav_storage/management/commands/: run_wsgidav.py
django_webdav_storage/tests/: __init__.py  tests_delete.py  tests_exists.py  tests_list_dir.py  tests_open.py  tests_path.py  tests_save.py  tests_size.py  tests_url.py
docs/source/: authors.rst  base.rst  changelog.rst  conf.py  configuration.rst  examples.rst  index.rst
example_project/: db.sqlite3  manage.py
example_project/example_app/: admin.py  apps.py  forms.py  models.py  views.py
example_project/example_app/migrations/: 0001_initial.py  0002_auto_20171228_2210.py
example_project/example_app/templates/: index.html
example_project/example_proj/: settings.py  urls.py  wsgi.py
tests/: conftest.py  test_storage.py
tests/.configs/nginx/: nginx.conf  webdav.conf
tests/storage_api_methods/: test_delete.py  test_exists.py  test_list_dir.py  test_open.py  test_save.py  test_size.py  test_url.py
