[tool.poetry]
name = "django-webdav-storage"
version = "1.0.0"
description = "A Django storage backend allowing you to easily save user-generated and static files into your own WebDAV storage rather than a local filesystem, as Django does by default."
authors = ["Mikhail Porokhovnichenko <marazmiki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wsgidav = "^3.0.2"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-isort = "^0.3.1"
pytest-flake8 = "^1.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
