[tool.poetry]
name = "django-webdav-storage"
version = "1.0.0"
description = "A Django storage backend allowing you to easily save user-generated and static files into your own WebDAV storage rather than a local filesystem, as Django does by default."
authors = ["Mikhail Porokhovnichenko <marazmiki@gmail.com>"]
license = "BSD-4-Clause"
homepage = "https://github.com/marazmiki/django-webdav-storage"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]


[tool.poetry.dependencies]
python = "^2.7 || ^3"

[tool.poetry.dev-dependencies]
wsgidav = "^3.0.2"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-isort = "^0.3.1"
pytest-flake8 = "^1.0.4"
twine = "^3.1.1"
bump2version = "^0.5.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
