[tool.poetry]
name = "django-webdav-storage"
version = "1.0.0"
description = "A Django storage backend allowing you to easily save user-generated and static files into your own WebDAV storage rather than a local filesystem, as Django does by default."
authors = ["Mikhail Porokhovnichenko <marazmiki@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/marazmiki/django-webdav-storage"
repository = "https://github.com/marazmiki/django-webdav-storage"
keywords = ["django", "webdav", "storage", "remote storage", "http"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = "~3.6 || ~3.7 || ~3.8 || ~3.9 || ~3.10"

[tool.poetry.dev-dependencies]
wsgidav = "*"
pytest = "*"
pytest-cov = "*"
pytest-isort = "*"
pytest-flake8 = "*"
bump2version = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
