[metadata]

name = django-webdav-storage
version = 1.0.0
description = 
    This application allows you easily save user-generated and
    static files into your own WebDAV storage rather than a local
    filesystem, as Django does by default.
long_description = file:README.rst
author = Mikhail Porokhovnichenko
author_email = marazmiki@gmail.com
url = https://github.com/marazmiki/django-webdav-storage
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
include_package_data = True
test_suite = tests
install_requires =
    requests
tests_require = 
    requests
    coveralls
    flake8
    coverage
    pytest
    pytest-cov
zip_safe = False

; Distribution
[bdist_wheel]
universal = 1

[tool:pytest]
addopts =
    -s
    --exitfirst
    --cov-report term-missing
    --cov-report term:skip-covered
    --cov-append
    --cov=.

; tox
[tox:tox]
envlist =
    py{27,34,35,36}-dj{10,11}
    py{34,35,36}-dj{20}

[testenv]
commands =
    pytest
whitelist_externals =
    pytest
deps =
    flake8
    coverage
    coveralls

; py27
[testenv:py27-dj10]
basepython = python2.7
deps =
    django>=1.10,<1.11
    {[testenv]deps}

[testenv:py27-dj11]
basepython = python2.7
deps =
    django>=1.11,<2
    {[testenv]deps}

; py34
[testenv:py34-dj10]
basepython = python3.4
deps =
    django>=1.10,<1.11
    {[testenv]deps}

[testenv:py34-dj11]
basepython = python3.4
deps =
    django>=1.11,<2
    {[testenv]deps}

[testenv:py34-dj20]
basepython = python3.4
deps =
    django>=2.0,<2.1
    {[testenv]deps}

; py35

[testenv:py35-dj10]
basepython = python3.5
deps =
    django>=1.10,<1.11
    {[testenv]deps}

[testenv:py35-dj11]
basepython = python3.5
deps =
    django>=1.11,<2
    {[testenv]deps}

[testenv:py35-dj20]
basepython = python3.5
deps =
    django>=2.0,<2.1
    {[testenv]deps}

; py36

[testenv:py36-dj10]
basepython = python3.6
deps =
    django>=1.10,<1.11
    {[testenv]deps}

[testenv:py36-dj11]
basepython = python3.6
deps =
    django>=1.11,<2
    {[testenv]deps}

[testenv:py36-dj20]
basepython = python3.6
deps =
    django>=2.0,<2.1
    {[testenv]deps}

; Coverage settings
[coverage:run]
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    self.fail\(
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

[bumpversion:bumpversion]
current_version = 1.0.0
commit = True
tag = True
files =
    setup.cfg
    django_webdav_storage/__init__.py
