[metadata]
name = django-webdav-storage
version = 1.0.0

[bdist_wheel]
universal = 1

[tool:pytest]
addopts =
    -s
    -v
    -x
    --isort
    --flake8
    --cov-config setup.cfg
    --cov-report term-missing
    --cov-report term:skip-covered
    --cov-append
    --cov=.

; tox
[tox:tox]
envlist =
    py27-dj{111}
    py35-dj{111,20,21,22}
    py36-dj{111,20,21,22,30}
    py37-dj{111,20,21,22,30}
    py38-dj{111,20,21,22,30}

basepython =
    py27: python2.7
    py35: python3.5
    py36: python3.6
    py37: python3.7
    py38: python3.8

[testenv]
deps =
    dj111: django>=1.11,<2.0
    dj20: django>=2.0,<2.1
    dj21: django>=2.1,<2.2
    dj22: django>=2.2,<3.0
    dj30: django>=3.0,<3.1
    wsgidav
    pytest-cov
    pytest-isort
    pytest-flake8
    coverage
    coveralls

commands =
    pytest {posargs}

whitelist_externals =
    pytest

setenv =
    PYTHONPATH = .
    WEBDAV_URL = {env:WEBDAV_URL:http://localhost:8080/}
    WEBDAV_PUBLIC_URL = {env:WEBDAV_PUBLIC_URL:http://localhost:8080/}
    WEBDAV_LISTING_BACKEND = {env:WEBDAV_LISTING_BACKEND:django_webdav_storage.listing.wsgidav_autoindex}

; Coverage settings
[coverage:run]
branch = True
omit =
    .tox/*
    .eggs/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    self.fail\(
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
omit =
    .tox/*
    .eggs/*

[bumpversion:bumpversion]
current_version = 1.0.0
commit = True
tag = True
files =
    setup.cfg
    django_webdav_storage/__init__.py

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:pyproject.toml]
search = version = "1.0.0"
replace = version = "{new_version}"

[bumpversion:file:django_webdav_storage/__init__.py]
search = __version__ = u'{current_version}'
replace = __version__ = u'{new_version}'
